--- a/_includes/content.html
+++ b/_includes/content.html
@@ -1,24 +1,29 @@
-<h2>About Compass</h2>
-<p>Compass has been designed with something very specific in mind: to be a simple and elegant personal landing page.</p>
+<h2>About me</h2>
+<p>Go bears!</p>
 
-<h2>Features</h2>
+<h2>Education</h2>
 <ul>
-  <li>Responsive design</li>
-  <li>Mobile friendly</li>
-  <li>Easy deployment to <a href="https://pages.github.com/">GitHub Pages</a></li>
+  <li>UC Berkeley</li>
+  <li>Stanford Law School</li>
 </ul>
-
-<p>For more information, including setup and configuration instructions, bug reports or feature requests head over to <a href="https://github.com/excentris/compass">GitHub</a>.</p>
 
 <hr />
 
 <ul class="fa-ul main-list">
   <li class="main-list-item">
-    <span class="fa fa-github fa-lg main-list-item-icon"></span>
-    <a href="https://github.com/excentris/compass">GitHub Repository</a>
+    <span class="fa fa-envelope fa-lg main-list-item-icon"></span>
+    <a href="mailto:me@maliamcpherson/com">me@maliamcpherson.com</a>
   </li>
   <li class="main-list-item">
-    <span class="fa fa-user fa-lg main-list-item-icon"></span>
-    <a href="http://excentris.net">The Author</a>
+    <span class="fa fa-facebook fa-lg main-list-item-icon"></span>
+    <a href="facebook.com/maliajmcpherson">Facebook</a>
+  </li>
+  <li class="main-list-item">
+    <span class="fa fa-linkedin fa-lg main-list-item-icon"></span>
+    <a href="linkedin.com/pub/malia-mcpherson/23/a6a/a86">LinkedIn</a>
+  </li>
+  <li class="main-list-item">
+    <span class="fa fa-wordpress fa-lg main-list-item-icon"></span>
+    <a href="beakerreport.com">Beaker Report</a>
   </li>
 </ul>
