--- a/_includes/content.html
+++ b/_includes/content.html
@@ -12,18 +12,18 @@
 <ul class="fa-ul main-list">
   <li class="main-list-item">
     <span class="fa fa-envelope fa-lg main-list-item-icon"></span>
-    <a href="mailto:me@maliamcpherson/com">me@maliamcpherson.com</a>
+    <a href="mailto:me@maliamcpherson.com">me@maliamcpherson.com</a>
   </li>
   <li class="main-list-item">
     <span class="fa fa-facebook fa-lg main-list-item-icon"></span>
-    <a href="facebook.com/maliajmcpherson">Facebook</a>
+    <a href="http://facebook.com/maliajmcpherson">Facebook</a>
   </li>
   <li class="main-list-item">
     <span class="fa fa-linkedin fa-lg main-list-item-icon"></span>
-    <a href="linkedin.com/pub/malia-mcpherson/23/a6a/a86">LinkedIn</a>
+    <a href="http://linkedin.com/pub/malia-mcpherson/23/a6a/a86">LinkedIn</a>
   </li>
   <li class="main-list-item">
     <span class="fa fa-wordpress fa-lg main-list-item-icon"></span>
-    <a href="beakerreport.com">Beaker Report</a>
+    <a href="http://beakerreport.com">Beaker Report</a>
   </li>
 </ul>
