Commenting out everything but comments

--- a/_includes/content.html
+++ b/_includes/content.html
@@ -1,13 +1,15 @@
-<h2>About me</h2>
-<p>Go bears!</p>
+<!-- <h2>About me</h2> -->
+<!-- <p>Go bears!</p> -->
 
-<h2>Education</h2>
-<ul>
-  <li>UC Berkeley</li>
-  <li>Stanford Law School</li>
-</ul>
+<!-- <h2>Education</h2> -->
+<!-- <ul> -->
+<!--   <li>Item</li> -->
+<!--   <li>Item</li> -->
+<!-- </ul> -->
 
-<hr />
+<!-- <p>Example paragraph</p> -->
+
+<!-- <hr /> -->
 
 <ul class="fa-ul main-list">
   <li class="main-list-item">
